chore #42: 코드 리포맷 적용